--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.cmjs-form {
+  height: 80%;
+  width: 80%;
+  top: 10%;
+  left: 10%;
+  position: fixed;
+  background-color: white;
+}
